--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -27,100 +27,104 @@ models:
           int_shopify_gql__product_variant:
             +materialized: view # so we can use the dbt_utils.star and dbt_utils.get_column_values macros
     staging:
-      +schema: shopify_source
+      +schema: stg_shopify
       +materialized: view
+      rest:
+        stg_shopify__metafield:
+          +materialized: table
+      graphql:
+        stg_shopify__metafield:
+          +materialized: table
 
 vars:
   shopify:
-    shopify_customer: "{{ source('shopify', 'customer') }}"
-    shopify_order: "{{ source('shopify', 'order') }}"
-    shopify_order_line: "{{ source('shopify', 'order_line') }}"
-    shopify_order_line_refund: "{{ source('shopify', 'order_line_refund') }}"
-    shopify_product: "{{ source('shopify', 'product') }}"
-    shopify_product_variant: "{{ source('shopify', 'product_variant') }}"
-    shopify_transaction: "{{ source('shopify', 'transaction') }}"
-    shopify_refund: "{{ source('shopify', 'refund') }}"
-    shopify_order_adjustment: "{{ source('shopify', 'order_adjustment') }}"
-    shopify_abandoned_checkout: "{{ source('shopify', 'abandoned_checkout') }}"
-    shopify_collection_product: "{{ source('shopify', 'collection_product') }}"
-    shopify_collection: "{{ source('shopify', 'collection') }}"
-    shopify_customer_tag: "{{ source('shopify', 'customer_tag') }}"    
-    shopify_discount_allocation: "{{ source('shopify', 'discount_allocation') }}" 
-    shopify_discount_application: "{{ source('shopify', 'discount_application') }}" 
-    shopify_discount_code_app: "{{ source('shopify', 'discount_code_app') }}" 
-    shopify_discount_code_basic: "{{ source('shopify', 'discount_code_basic') }}" 
-    shopify_discount_code_bxgy: "{{ source('shopify', 'discount_code_bxgy') }}" 
-    shopify_discount_code_free_shipping: "{{ source('shopify', 'discount_code_free_shipping') }}" 
-    shopify_discount_redeem_code: "{{ source('shopify', 'discount_redeem_code') }}"         
-    shopify_fulfillment: "{{ source('shopify', 'fulfillment') }}"
-    shopify_inventory_item: "{{ source('shopify', 'inventory_item') }}"
-    shopify_inventory_level: "{{ source('shopify', 'inventory_level') }}"
-    shopify_inventory_quantity: "{{ source('shopify', 'inventory_quantity') }}"
-    shopify_location: "{{ source('shopify', 'location') }}"
-    shopify_media: "{{ source('shopify', 'media') }}"
-    shopify_media_image: "{{ source('shopify', 'media_image') }}"    
-    shopify_metafield: "{{ source('shopify', 'metafield') }}"
-    shopify_order_note_attribute: "{{ source('shopify', 'order_note_attribute') }}"
-    shopify_order_shipping_line: "{{ source('shopify', 'order_shipping_line') }}"
-    shopify_order_shipping_tax_line: "{{ source('shopify', 'order_shipping_tax_line') }}"
-    shopify_order_tag: "{{ source('shopify', 'order_tag') }}"
-    shopify_order_url_tag: "{{ source('shopify', 'order_url_tag') }}"
-    shopify_product_media: "{{ source('shopify', 'product_media') }}"
-    shopify_product_variant_media: "{{ source('shopify', 'product_variant_media') }}"
-    shopify_product_tag: "{{ source('shopify', 'product_tag') }}"
-    shopify_shop: "{{ source('shopify', 'shop') }}"
-    shopify_tax_line: "{{ source('shopify', 'tax_line') }}"
-    shopify_tender_transaction: "{{ source('shopify', 'tender_transaction') }}"
-    shopify_abandoned_checkout_discount_code: "{{ source('shopify', 'abandoned_checkout_discount_code') }}"
-    shopify_order_discount_code: "{{ source('shopify', 'order_discount_code') }}"
-    shopify_abandoned_checkout_shipping_line: "{{ source('shopify', 'abandoned_checkout_shipping_line') }}"
-    shopify_fulfillment_event: "{{ source('shopify', 'fulfillment_event') }}"
+    customer_source: "{{ source('shopify','customer') }}"
+    order_line_refund_source: "{{ source('shopify','order_line_refund') }}"
+    order_line_source: "{{ source('shopify','order_line') }}"
+    order_source: "{{ source('shopify','order') }}"
+    product_source: "{{ source('shopify','product') }}"
+    product_variant_source: "{{ source('shopify','product_variant') }}"
+    transaction_source: "{{ source('shopify','transaction') }}"
+    refund_source: "{{ source('shopify','refund') }}"
+    order_adjustment_source: "{{ source('shopify','order_adjustment') }}"
+    abandoned_checkout_source: "{{ source('shopify','abandoned_checkout') }}"
+    collection_product_source: "{{ source('shopify','collection_product') }}"
+    collection_source: "{{ source('shopify','collection') }}" 
+    customer_tag_source: "{{ source('shopify','customer_tag') }}"
+    discount_allocation_source: "{{ source('shopify','discount_allocation') }}"
+    discount_application_source: "{{ source('shopify','discount_application') }}"
+    discount_code_app_source: "{{ source('shopify','discount_code_app') }}"
+    discount_code_basic_source: "{{ source('shopify','discount_code_basic') }}"
+    discount_code_bxgy_source: "{{ source('shopify','discount_code_bxgy') }}"
+    discount_code_free_shipping_source: "{{ source('shopify','discount_code_free_shipping') }}"
+    discount_redeem_code_source: "{{ source('shopify','discount_redeem_code') }}"
+    fulfillment_source: "{{ source('shopify','fulfillment') }}"
+    inventory_item_source: "{{ source('shopify','inventory_item') }}"
+    inventory_level_source: "{{ source('shopify','inventory_level') }}"
+    inventory_quantity_source: "{{ source('shopify','inventory_quantity') }}"
+    location_source: "{{ source('shopify','location') }}"
+    media_source: "{{ source('shopify','media') }}"
+    media_image_source: "{{ source('shopify','media_image') }}"
+    metafield_source: "{{ source('shopify','metafield') }}"
+    order_note_attribute_source: "{{ source('shopify','order_note_attribute') }}"
+    order_shipping_line_source: "{{ source('shopify','order_shipping_line') }}"
+    order_shipping_tax_line_source: "{{ source('shopify','order_shipping_tax_line') }}"
+    order_tag_source: "{{ source('shopify','order_tag') }}"
+    order_url_tag_source: "{{ source('shopify','order_url_tag') }}"
+    product_media_source: "{{ source('shopify','product_media') }}"
+    product_variant_media_source: "{{ source('shopify','product_variant_media') }}"
+    product_tag_source: "{{ source('shopify','product_tag') }}"
+    shop_source: "{{ source('shopify','shop') }}" 
+    tender_transaction_source: "{{ source('shopify','tender_transaction') }}"
+    abandoned_checkout_discount_code_source: "{{ source('shopify','abandoned_checkout_discount_code') }}" 
+    order_discount_code_source: "{{ source('shopify','order_discount_code') }}" 
+    abandoned_checkout_shipping_line_source: "{{ source('shopify', 'abandoned_checkout_shipping_line') }}"
+    fulfillment_event_source: "{{ source('shopify', 'fulfillment_event') }}"
+    tax_line_source: "{{ source('shopify', 'tax_line') }}"
 
-    shopify_gql_customer: "{{ source('shopify_graphql', 'customer') }}"
-    shopify_gql_order: "{{ source('shopify_graphql', 'order') }}"
-    shopify_gql_order_line: "{{ source('shopify_graphql', 'order_line') }}"
-    shopify_gql_order_line_refund: "{{ source('shopify_graphql', 'order_line_refund') }}"
-    shopify_gql_product: "{{ source('shopify_graphql', 'product') }}"
-    shopify_gql_product_variant: "{{ source('shopify_graphql', 'product_variant') }}"
-    shopify_gql_transaction: "{{ source('shopify_graphql', 'transaction') }}"
-    shopify_gql_refund: "{{ source('shopify_graphql', 'refund') }}"
-    shopify_gql_order_adjustment: "{{ source('shopify_graphql', 'order_adjustment') }}"
-    shopify_gql_abandoned_checkout: "{{ source('shopify_graphql', 'abandoned_checkout') }}"
-    shopify_gql_collection_product: "{{ source('shopify_graphql', 'collection_product') }}"
-    shopify_gql_collection: "{{ source('shopify_graphql', 'collection') }}"
-    shopify_gql_collection_rule: "{{ source('shopify_graphql', 'collection_rule') }}"
-    shopify_gql_customer_address: "{{ source('shopify_graphql', 'customer_address') }}"
-    shopify_gql_customer_tag: "{{ source('shopify_graphql', 'customer_tag') }}"    
-    shopify_gql_customer_visit: "{{ source('shopify_graphql', 'customer_visit') }}"
-    shopify_gql_discount_allocation: "{{ source('shopify_graphql', 'discount_allocation') }}" 
-    shopify_gql_discount_application: "{{ source('shopify_graphql', 'discount_application') }}" 
-    shopify_gql_discount_code_app: "{{ source('shopify_graphql', 'discount_code_app') }}" 
-    shopify_gql_discount_code_basic: "{{ source('shopify_graphql', 'discount_code_basic') }}" 
-    shopify_gql_discount_code_bxgy: "{{ source('shopify_graphql', 'discount_code_bxgy') }}" 
-    shopify_gql_discount_code_free_shipping: "{{ source('shopify_graphql', 'discount_code_free_shipping') }}" 
-    shopify_gql_discount_redeem_code: "{{ source('shopify_graphql', 'discount_redeem_code') }}"         
-    shopify_gql_fulfillment: "{{ source('shopify_graphql', 'fulfillment') }}"
-    shopify_gql_fulfillment_tracking_info: "{{ source('shopify_graphql', 'fulfillment_tracking_info') }}"
-    shopify_gql_inventory_item: "{{ source('shopify_graphql', 'inventory_item') }}"
-    shopify_gql_inventory_level: "{{ source('shopify_graphql', 'inventory_level') }}"
-    shopify_gql_inventory_quantity: "{{ source('shopify_graphql', 'inventory_quantity') }}"
-    shopify_gql_location: "{{ source('shopify_graphql', 'location') }}"
-    shopify_gql_media: "{{ source('shopify_graphql', 'media') }}"
-    shopify_gql_media_image: "{{ source('shopify_graphql', 'media_image') }}"    
-    shopify_gql_metafield: "{{ source('shopify_graphql', 'metafield') }}"
-    shopify_gql_order_note_attribute: "{{ source('shopify_graphql', 'order_note_attribute') }}"
-    shopify_gql_order_shipping_line: "{{ source('shopify_graphql', 'order_shipping_line') }}"
-    shopify_gql_order_shipping_tax_line: "{{ source('shopify_graphql', 'order_shipping_tax_line') }}"
-    shopify_gql_order_tag: "{{ source('shopify_graphql', 'order_tag') }}"
-    shopify_gql_order_url_tag: "{{ source('shopify_graphql', 'order_url_tag') }}"
-    shopify_gql_product_media: "{{ source('shopify_graphql', 'product_media') }}"
-    shopify_gql_product_variant_media: "{{ source('shopify_graphql', 'product_variant_media') }}"
-    shopify_gql_product_tag: "{{ source('shopify_graphql', 'product_tag') }}"
-    shopify_gql_shop: "{{ source('shopify_graphql', 'shop') }}"
-    shopify_gql_tax_line: "{{ source('shopify_graphql', 'tax_line') }}"
-    shopify_gql_tender_transaction: "{{ source('shopify_graphql', 'tender_transaction') }}"
-    shopify_gql_abandoned_checkout_discount_code: "{{ source('shopify_graphql', 'abandoned_checkout_discount_code') }}"
-    shopify_gql_order_discount_code: "{{ source('shopify_graphql', 'order_discount_code') }}"
-    shopify_gql_abandoned_checkout_shipping_line: "{{ source('shopify_graphql', 'abandoned_checkout_shipping_line') }}"
-    shopify_gql_fulfillment_event: "{{ source('shopify_graphql', 'fulfillment_event') }}"
-    shopify_gql_fulfillment_order_line_item: "{{ source('shopify_graphql', 'fulfillment_order_line_item') }}"
+    gql_abandoned_checkout_source: "{{ source('shopify_graphql','abandoned_checkout') }}"
+    gql_collection_product_source: "{{ source('shopify_graphql','collection_product') }}"
+    gql_collection_source: "{{ source('shopify_graphql','collection') }}" 
+    gql_customer_tag_source: "{{ source('shopify_graphql','customer_tag') }}"
+    gql_discount_allocation_source: "{{ source('shopify_graphql','discount_allocation') }}"
+    gql_discount_application_source: "{{ source('shopify_graphql','discount_application') }}"
+    gql_discount_code_app_source: "{{ source('shopify_graphql','discount_code_app') }}"
+    gql_discount_code_basic_source: "{{ source('shopify_graphql','discount_code_basic') }}"
+    gql_discount_code_bxgy_source: "{{ source('shopify_graphql','discount_code_bxgy') }}"
+    gql_discount_code_free_shipping_source: "{{ source('shopify_graphql','discount_code_free_shipping') }}"
+    gql_discount_redeem_code_source: "{{ source('shopify_graphql','discount_redeem_code') }}"
+    gql_fulfillment_source: "{{ source('shopify_graphql','fulfillment') }}"
+    gql_inventory_item_source: "{{ source('shopify_graphql','inventory_item') }}"
+    gql_inventory_level_source: "{{ source('shopify_graphql','inventory_level') }}"
+    gql_inventory_quantity_source: "{{ source('shopify_graphql','inventory_quantity') }}"
+    gql_location_source: "{{ source('shopify_graphql','location') }}"
+    gql_media_source: "{{ source('shopify_graphql','media') }}"
+    gql_media_image_source: "{{ source('shopify_graphql','media_image') }}"
+    gql_metafield_source: "{{ source('shopify_graphql','metafield') }}"
+    gql_order_line_refund_source: "{{ source('shopify_graphql','order_line_refund') }}" 
+    gql_order_note_attribute_source: "{{ source('shopify_graphql','order_note_attribute') }}"
+    gql_order_shipping_line_source: "{{ source('shopify_graphql','order_shipping_line') }}"
+    gql_order_shipping_tax_line_source: "{{ source('shopify_graphql','order_shipping_tax_line') }}"
+    gql_order_tag_source: "{{ source('shopify_graphql','order_tag') }}"
+    gql_product_media_source: "{{ source('shopify_graphql','product_media') }}"
+    gql_product_variant_media_source: "{{ source('shopify_graphql','product_variant_media') }}"
+    gql_product_tag_source: "{{ source('shopify_graphql','product_tag') }}"
+    gql_shop_source: "{{ source('shopify_graphql','shop') }}"
+    gql_tender_transaction_source: "{{ source('shopify_graphql','tender_transaction') }}"
+    gql_abandoned_checkout_discount_code_source: "{{ source('shopify_graphql','abandoned_checkout_discount_code') }}" 
+    gql_order_discount_code_source: "{{ source('shopify_graphql','order_discount_code') }}" 
+    gql_fulfillment_event_source: "{{ source('shopify_graphql', 'fulfillment_event') }}"
+    gql_tax_line_source: "{{ source('shopify_graphql', 'tax_line') }}"
+    gql_fulfillment_tracking_info_source: "{{ source('shopify_graphql', 'fulfillment_tracking_info') }}"
+    gql_fulfillment_order_line_item_source: "{{ source('shopify_graphql', 'fulfillment_order_line_item') }}"
+    gql_customer_visit_source: "{{ source('shopify_graphql', 'customer_visit') }}"
+    gql_customer_address_source: "{{ source('shopify_graphql', 'customer_address') }}"
+    gql_collection_rule_source: "{{ source('shopify_graphql', 'collection_rule') }}"
+
+    customer_pass_through_columns: []
+    order_line_refund_pass_through_columns: []
+    order_line_pass_through_columns: []
+    order_pass_through_columns: []
+    product_pass_through_columns: []
+    product_variant_pass_through_columns: []
+    transaction_pass_through_columns: []
