--- a/integration_tests/dbt_project.yml
+++ b/integration_tests/dbt_project.yml
@@ -22,7 +22,7 @@ vars:
   shopify_schema: shopify_integration_tests_17
   shopify_api_override: rest
 
-  shopify_source:
+  shopify:
     shopify_customer_identifier: "shopify_customer_data"
     shopify_order_line_refund_identifier: "shopify_order_line_refund_data"
     shopify_order_line_identifier: "shopify_order_line_data"
