--- a/integration_tests/dbt_project.yml
+++ b/integration_tests/dbt_project.yml
@@ -21,6 +21,7 @@ vars:
   
   shopify_schema: shopify_integration_tests_17
   shopify_api_override: rest
+  shopify_api: rest
 
   shopify:
     shopify_customer_identifier: "shopify_customer_data"
