--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -34,12 +34,11 @@ models:
       staging:
         +schema: stg_shopify
         +materialized: view
-        stg_shopify__metafield:
+        stg_shopify_gql__metafield:
           +materialized: table
 
 vars:
   shopify:
-    shopify_api: graphql
     customer_source: "{{ source('shopify','customer') }}"
     order_line_refund_source: "{{ source('shopify','order_line_refund') }}"
     order_line_source: "{{ source('shopify','order_line') }}"
