airbyte order, fullfilment and product models

--- a/models/staging/sources.yml
+++ b/models/staging/sources.yml
@@ -26,3 +26,5 @@ sources:
         identifier: inventory_items
       - name: locations
         identifier: locations
+      - name: fulfillments
+        identifier: fulfillments
