--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -4,6 +4,11 @@ config-version: 2
 require-dbt-version: [">=1.3.0", "<2.0.0"]
 profile: 'wow_ai_transformation'
 
+quoting:
+  database: true
+  schema: true
+  identifier: true
+
 on-run-start:
   - "CREATE SCHEMA IF NOT EXISTS `{{ target.project }}.{{ target.dataset }}_stg_shopify` OPTIONS(location='{{ target.location }}')"
   - "CREATE SCHEMA IF NOT EXISTS `{{ target.project }}.{{ target.dataset }}_airshopify` OPTIONS(location='{{ target.location }}')"
