--- a/models/graphql/metafields/shopify_metafields.yml
+++ b/models/graphql/metafields/shopify_metafields.yml
@@ -2,19 +2,19 @@ version: 2
 
 models:
   - name: shopify_gql__collection_metafields
-    description: Replica of the stg_shopify_gql__collection model with the addition of metafields pivoted out from the stg_shopify_gql__metafield model.
+    description: Replica of the `stg_shopify_gql__collection` model with the addition of metafields pivoted out from the `stg_shopify_gql__metafield` model. Metafields are joined into the `shopify_gql__products` end model downstream.
 
   - name: shopify_gql__customer_metafields
-    description: Replica of the stg_shopify_gql__customer model with the addition of metafields pivoted out from the stg_shopify_gql__metafield model.
+    description: Replica of the `stg_shopify_gql__customer` model with the addition of metafields pivoted out from the `stg_shopify_gql__metafield` model. Metafields are joined into the `shopify_gql__customers` and `shopify_gql__customers_emails` end models downstream.
 
   - name: shopify_gql__order_metafields
-    description: Replica of the stg_shopify_gql__order model with the addition of metafields pivoted out from the stg_shopify_gql__metafield model.
+    description: Replica of the `stg_shopify_gql__order` model with the addition of metafields pivoted out from the `stg_shopify_gql__metafield` model. Metafields are joined into the `shopify_gql__orders` end model downstream.
 
   - name: shopify_gql__product_metafields
-    description: Replica of the stg_shopify_gql__product model with the addition of metafields pivoted out from the stg_shopify_gql__metafield model.
+    description: Replica of the `stg_shopify_gql__product` model with the addition of metafields pivoted out from the `stg_shopify_gql__metafield` model. Metafields are joined into the `shopify_gql__products` end model downstream.
 
   - name: shopify_gql__product_variant_metafields
-    description: Replica of the stg_shopify_gql__product_variant model with the addition of metafields pivoted out from the stg_shopify_gql__metafield model.
+    description: Replica of the `stg_shopify_gql__product_variant` model with the addition of metafields pivoted out from the `stg_shopify_gql__metafield` model. Metafields are joined into the `shopify_gql__inventory_levels` end model downstream.
 
   - name: shopify_gql__shop_metafields
-    description: Replica of the stg_shopify_gql__shop model with the addition of metafields pivoted out from the stg_shopify_gql__metafield model.
+    description: Replica of the `stg_shopify_gql__shop` model with the addition of metafields pivoted out from the `stg_shopify_gql__metafield` model. Metafields are joined into the `shopify_gql__daily_shop` end model downstream.
