--- a/models/rest/metafields/shopify_metafields.yml
+++ b/models/rest/metafields/shopify_metafields.yml
@@ -2,19 +2,19 @@ version: 2
 
 models:
   - name: shopify__collection_metafields
-    description: Replica of the stg_shopify__collection model with the addition of metafields pivoted out from the stg_shopify__metafield model.
+    description: Replica of the `stg_shopify__collection` model with the addition of metafields pivoted out from the `stg_shopify__metafield` model. Metafields are joined into the `shopify__products` end model downstream.
 
   - name: shopify__customer_metafields
-    description: Replica of the stg_shopify__customer model with the addition of metafields pivoted out from the stg_shopify__metafield model.
+    description: Replica of the `stg_shopify__customer` model with the addition of metafields pivoted out from the `stg_shopify__metafield` model. Metafields are joined into the `shopify__customers` and `shopify__customers_emails` end models downstream.
 
   - name: shopify__order_metafields
-    description: Replica of the stg_shopify__order model with the addition of metafields pivoted out from the stg_shopify__metafield model.
+    description: Replica of the `stg_shopify__order` model with the addition of metafields pivoted out from the `stg_shopify__metafield` model. Metafields are joined into the `shopify__orders` end model downstream.
 
   - name: shopify__product_metafields
-    description: Replica of the stg_shopify__product model with the addition of metafields pivoted out from the stg_shopify__metafield model.
+    description: Replica of the `stg_shopify__product` model with the addition of metafields pivoted out from the `stg_shopify__metafield` model. Metafields are joined into the `shopify__products` end model downstream.
 
   - name: shopify__product_variant_metafields
-    description: Replica of the stg_shopify__product_variant model with the addition of metafields pivoted out from the stg_shopify__metafield model.
+    description: Replica of the `stg_shopify__product_variant` model with the addition of metafields pivoted out from the `stg_shopify__metafield` model. Metafields are joined into the `shopify__inventory_levels` end model downstream.
 
   - name: shopify__shop_metafields
-    description: Replica of the stg_shopify__shop model with the addition of metafields pivoted out from the stg_shopify__metafield model.
+    description: Replica of the `stg_shopify__shop` model with the addition of metafields pivoted out from the `stg_shopify__metafield` model. Metafields are joined into the `shopify__daily_shop` end model downstream.
