--- a/integration_tests/dbt_project.yml
+++ b/integration_tests/dbt_project.yml
@@ -466,6 +466,10 @@ seeds:
       +column_types:
         product_id: "{%- if target.type == 'bigquery' -%} INT64 {%- else -%} bigint {%- endif -%}"
         media_id: "{%- if target.type == 'bigquery' -%} INT64 {%- else -%} bigint {%- endif -%}"
+    shopify_collection_product_data:
+      +column_types:
+        collection_id: "{%- if target.type == 'bigquery' -%} INT64 {%- else -%} bigint {%- endif -%}"
+        product_id: "{%- if target.type == 'bigquery' -%} INT64 {%- else -%} bigint {%- endif -%}"
   +docs:
     show: false
 
