--- a/models/shopify.yml
+++ b/models/shopify.yml
@@ -370,7 +370,7 @@ models:
           field and the deprecated `accepts_marketing` field. Records with the old field will be marked with '(legacy)'.
 
   - name: shopify__customer_emails
-    description: Each record represents a customer email in Shopify. Will also include `CUSTOMER` metafields if enabled.
+    description: Each record represents a customer email in Shopify. Does **not** include `CUSTOMER` metafields.
     columns:
       - name: last_fivetran_synced
         description: "{{ doc('_fivetran_synced') }}"
@@ -460,7 +460,7 @@ models:
           field and the deprecated `accepts_marketing` field. Records with the old field will be marked with '(legacy)'.
 
   - name: shopify__products
-    description: Each record represents a product in Shopify. Will also include `PRODUCT` and `COLLECTION` metafields if enabled.
+    description: Each record represents a product in Shopify. Will also include `PRODUCT` if enabled.
     columns:
       - name: is_deleted
         description: Whether the record has been deleted in the source system.
